--- a/main/templates/main/test_page.html
+++ b/main/templates/main/test_page.html
@@ -8,7 +8,7 @@
 {% load staticfiles %}
 
 {% block links %}
-	<link rel="stylesheet" href="{% static 'css/main_pg.css' %}">
+	<link rel="stylesheet" href="{% static 'css/mainPage.css' %}">
 {% endblock %}
 
 
@@ -18,19 +18,7 @@
 
 
 {% block content %}
-	<div class="scroll-list one-line first1">
-		<a href="">Link to the first page </a> <br/>
-		<a href="">Link to the second page</a> <br/>
-		<a href="">Link to the third page </a> <br/>
-		<a href="">Link to the fourth page</a> <br/>
-		<a href="">Link to the fifth page </a> <br/>
-		<a href="">Link to the six page   </a> <br/>
-		<a href="">Link to the seven page </a> <br/>
-		<a href="">Link to the eight page </a> <br/>
-		<a href="">Link to the nine page  </a> <br/>
-		<a href="">Link to the ten page   </a> <br/>
-	</div>
-	<div class="body one-line second1">
+	<div class="body">
 		<p>
 			This is the test page!
 		</p>
