--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -17,15 +17,24 @@
 	<div class="meta">
 		An <span>Article</span> by <span><a href="">@FedotSoldier</a></span>
 	</div>
+	<div class="scroll-list one-line">
+		{% for page in pages %}
+			<a href="/page/{{page.sort}}">{{page.title}}</a> <br/>
+		{% endfor %}
+	</div>
+	<a class="button one-line" href="{% url 'main_page' %}">Previous page </a>
+	<a class="button one-line" href="/page/1">Next page     </a>
+	<a class="button one-line" href="/admin">Admin Panel</a>
+
+	<br/><br/><br/><br/><br/><br/><br/>
 	<div class="content">
 		{% block content %}
 		{% endblock %}
 	</div>
-	<div class="most-bottom">
-		<a href="{% url 'main_page' %}" class="button">Previous page </a>
-	</div>
-	<div class="most-bottom">
-		<a href="test" class="button">Next page     </a>
-	</div>
+	
+	<br/><br/><br/>
+	<a href="{% url 'main_page' %}" class="button">Previous page </a>
+	<a href="/page/1" class="button">Next page     </a>
+	<br/><br/><br/>
 </body>
 </html>
