[ 3 ] Добавлено динамическое добавление страницы на сайт, по ее созданию и определению в базе данных
    Теперь для добавления страницы на сайт достаточно создать страницу(.html файл) по образцу(создать ее как расширение django-шаблона), поместить ее в директорию"main\templates\main" и определить в базе данных, указав три поля: Название - вид отображения страницы на ссылке и тп, Имя шаблона - имя html файла страницы в вышеупомянутой директории без расширения, Поле Sort - порядок отображения страницы в списке страниц(и везде, если еще где-нибудь это понадобится)

--- a/main/templates/main/new_page.html
+++ b/main/templates/main/new_page.html
@@ -1,25 +1,23 @@
 {% extends 'main/base.html' %}
 
-<!-- Сообщаем Django, что мы подключаем статические файлы -->
 {% load staticfiles %}
 
 {% block links %}
 	<link rel="stylesheet" href="{% static 'css/mainPage.css' %}">
 {% endblock %}
 
-
 {% block headline %}
-	Our history website<span>A Demo For Beautiful Historical Sites on the Web</span>
+	Our history website
+	<span>My new page</span>
 {% endblock %}
-
 
 {% block content %}
 	<div class="body">
 		<p>
-			This is the test page!
+			This is the new test page!
 		</p>
 		<p1 class="date">
-			Created: Novemer 4, 2018
+			Created: Novemer 21, 2018
 		</p1>
 	</div>
 {% endblock %}
