--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,11 +19,11 @@
 	</div>
 	<div class="scroll-list one-line">
 		{% for page in pages %}
-			<a href="/page/{{page.sort}}">{{page.title}}</a> <br/>
+			<a href="{% url 'page_detail' pattern=page.urlpattern_name %}">{{page.title}}</a> <br/>
 		{% endfor %}
 	</div>
-	<a class="button one-line" href="{% url 'main_page' %}">Previous page </a>
-	<a class="button one-line" href="/page/1">Next page     </a>
+	<a class="button one-line" href="{% url 'page_detail' pattern='main_page' %}">Previous page </a>
+	<a class="button one-line" href="{% url 'page_detail' pattern='test_page' %}">Next page     </a>
 	<a class="button one-line" href="/admin">Admin Panel</a>
 
 	<br/><br/><br/><br/><br/><br/><br/>
@@ -33,8 +33,8 @@
 	</div>
 	
 	<br/><br/><br/>
-	<a href="{% url 'main_page' %}" class="button">Previous page </a>
-	<a href="/page/1" class="button">Next page     </a>
+	<a href="{% url 'page_detail' pattern='main_page' %}" class="button">Previous page </a>
+	<a href="{% url 'page_detail' pattern='test_page' %}" class="button">Next page     </a>
 	<br/><br/><br/>
 </body>
 </html>
