--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -22,8 +22,8 @@
 			<a href="{% url 'page_detail' pattern=page.urlpattern_name %}">{{page.title}}</a> <br/>
 		{% endfor %}
 	</div>
-	<a class="button one-line" href="{% url 'page_detail' pattern='main_page' %}">Previous page </a>
-	<a class="button one-line" href="{% url 'page_detail' pattern='test_page' %}">Next page     </a>
+	<a class="button one-line" href="{% url 'page_detail' pattern=prev_page %}">Previous page </a>
+	<a class="button one-line" href="{% url 'page_detail' pattern=next_page %}">Next page     </a>
 	<a class="button one-line" href="/admin">Admin Panel</a>
 
 	<br/><br/><br/><br/><br/><br/><br/>
@@ -33,8 +33,8 @@
 	</div>
 	
 	<br/><br/><br/>
-	<a href="{% url 'page_detail' pattern='main_page' %}" class="button">Previous page </a>
-	<a href="{% url 'page_detail' pattern='test_page' %}" class="button">Next page     </a>
+	<a href="{% url 'page_detail' pattern=prev_page %}" class="button">Previous page </a>
+	<a href="{% url 'page_detail' pattern=next_page %}" class="button">Next page     </a>
 	<br/><br/><br/>
 </body>
 </html>
