[ 5 ] Начала добавляться информационная составляющая сайта. Исправлена ошибка в представлении при переходе на предыдущую страницу
На сайте появился контент. Теперь уже он напрямую связан с обороной Минска 1941 года.

Исправлена ошибка перехода на предыдущую страницу, возникающая в том случае, если в базе есть только одна страница

--- a/main/templates/main/main_page.html
+++ b/main/templates/main/main_page.html
@@ -3,21 +3,150 @@
 {% load staticfiles %}
 
 {% block links %}
-	<link rel="stylesheet" href="{% static 'css/mainPage.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main_page.css' %}">
 {% endblock %}
 
 {% block headline %}
-	Our history website<span>A Demo For Beautiful Historical Sites on the Web</span>
+	Белостокско-Минское сражение<span>{{curr_page.title}}</span>
 {% endblock %}
 
-
 {% block content %}
-	<div class="body">
-		<p>
-			<img class="img-150" src="{% static 'images/theGreatWarSoldier.jpg' %}" align="right" alt="Soviet soldier of the great Patriotic war"/>It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.<br/><br/>It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.It has been suggested that beautiful and usable websites are created on a foundation of beautiful and usable typography. That makes it a pretty important element that you will want to look at very carefully. Fortunately, CSS offers a variety of styling options that allow you a great deal of control over how your present your content to your viewers and users. This demo - which is entirely driven by CSS - is built to demonstrate the step by step development of attractive typography, moving from basic HTML to fully styled content. You can use the buttons at the top of the page to view the content in various stages of styling, from completely unstyled to the completed design. Please feel free to have a bit of fun by working through the various stages.
-		</p>
-		<p1 class="date">
-			Created: Novemer 4, 2018
-		</p1>
-	</div>
+
+<div class="body">
+
+	<table cols="2" align="right" cellpadding="5" bordercolor="lightsteelblue" rules="all">
+		<tr>
+			<td class="sub" colspan="2">Белостокско-Минское сражение</td>
+		</tr>
+		<tr>
+    		<td>Основной конфликт</td>
+    		<td>Вторая мировая война</td>
+  		</tr>
+  		<tr>
+			<td>Дата</td>
+			<td>22 июня–8 июля 1941</td>
+		</tr>
+		<tr>
+			<td>Место</td>
+			<td>БССР, СССР</td>
+		</tr>
+		<tr>
+			<td>Итог</td>
+			<td>
+				Победа Третьего Рейха
+				Разгром советского Западного фронта
+			</td>
+		</tr>
+		<tr>
+			<td class="sub" colspan="2">Противники</td>
+		</tr>
+		<tr>
+			<td>Германия</td>
+			<td>СССР</td>
+		</tr>
+		<tr>
+			<td class="sub" colspan="2">Командующие</td>
+		</tr>
+		<tr>
+			<td>Ф. фон Бок </td>
+			<td>Д. Г. Павлов</td>
+		</tr>
+		<tr>
+			<td>А. Кессельринг </td>
+			<td>В. Е. Климовских</td>
+		</tr>
+		<tr>
+			<td>Г. фон Клюге </td>
+			<td>В. И. Кузнецов</td>
+		</tr>
+		<tr>
+			<td>А. Штраус </td>
+			<td>К. Д. Голубев</td>
+		</tr>
+		<tr>
+			<td>Г. Гот </td>
+			<td>А. А. Коробков</td>
+		</tr>
+		<tr>
+			<td>Г. Гудериан </td>
+			<td>П. М. Филатов</td>
+		</tr>
+		<tr>
+			<td>М. фон Вейхс</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td class="sub" colspan="2">Силы сторон</td>
+		</tr>
+		<tr>
+			<td>1,45 млн. человек</td>
+			<td>790 тыс. человек</td>
+		</tr>
+		<tr>
+			<td class="sub" colspan="2">Потери</td>
+		</tr>
+		<tr>
+			<td>6 535 убитых;</td>
+			<td>341 073 безвозвратные потери</td>
+		</tr>
+		<tr>
+			<td>20 071 раненых;</td>
+			<td>76 717 санитарные потери</td>
+		</tr>
+		<tr>
+			<td>1 111 пропали без вести</td>
+			<td></td>
+		</tr>
+		
+	</table>
+
+	<h2 class="h">
+		Белостокско-Минское сражение
+	</h2>
+
+	<p>
+		Белостокско-Минское сражение — приграничное сражение на центральном участке советско-германского фронта во время Великой Отечественной войны 22 июня — 8 июля 1941 года. В результате сражения основные силы советского Западного фронта оказались в окружении и были частично разгромлены, частично дезертировали, частично ушли в партизаны, частично попали в плен. 28 июня немецкие войска взяли Минск.
+	</p>
+	
+	<h2 class="h">
+		Планы и силы сторон
+	</h2>
+
+	<h3 class="h">
+		Германия
+	</h3>
+	
+	<img src="{% static 'images/peopleV.jpg' %}" align="left" width="100" style="margin: 1%;">
+
+	<p>
+		Немецкое командование наносило основной удар на Московском направлении силами группы армий «Центр» и 2-го воздушного флота
+	</p>
+
+	<p>
+		На 22 июня 1941 общая численность 1 453 200 солдат и офицеров (50 дивизий), 1700 танков, 910 самолетов, 3000 орудий.
+	</p>
+
+	<p>
+		План заключался в нанесении удара сильными фланговыми группировками при относительно слабом центре. 2-я и 3-я группы должны были соединиться и окружить советские войска западнее Минска. Одновременно пехотные соединения (всего 7 армейских корпусов, 20 пехотных дивизий), сведённые в две армии, вели наступление на окружение и должны были соединиться восточнее Белостока.
+	</p>
+
+	<h3 class="h">СССР</h3>
+
+	<p>
+		Планы СССР на начальный период войны точно не установлены.
+	</p>
+		<!-- &emsp; &ensp; &thinsp; &nbsp;-->
+	<p>
+		По одной версии (Ю. Горьков), приграничные советские армии должны были прикрыть отмобилизование и развёртывание основных сил, в процессе построения стратегической обороны до Москвы. По другой (М. Мельтюхов), планы прикрытия приграничных округов были всего лишь прикрытием отмобилизования и развёртывания и подготовки к возможной стратегической наступательной операции.
+	</p>
+
+	<p>
+		Противовоздушную оборону наиболее важных объектов в границах военного округа осуществляли войска Западной зоны ПВО. Всего в составе округа было 44 дивизии (24 стрелковые дивизии, 2 кавалерийские дивизии, 12 танковых дивизий, 6 мотострелковых дивизий, 3 воздушно-десантных бригады, 8 укрепленных районов.
+	</p>
+
+	<p1 class="date">
+		Created: December 7, 2018
+	</p1>
+</div>
+
 {% endblock %}
