--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -2,20 +2,25 @@ body {
   background: #f7d7ab;
 }
 
-h1 {
+.headline {
+  text-align: center;
   font-size: 2.5em;
-  font-family: Ubuntu;
-  letter-spacing: 0.1em;
   color: rgb(142,11,0);
-  text-shadow: 1px 1px 1px rgba(255,255,255,0.6);
+  letter-spacing: 0.1em;
   border-color: #cc6600;
   border-width: 10px;
   border-style: outset;
   border-radius: 20px;
   margin: 20px;
   padding: 5px 40px 5px 40px;
-  text-align: center;
   background-color: #b09071;
+}
+
+.h {
+  font-family: Ubuntu;
+  text-shadow: 1px 1px 1px rgba(255,255,255,0.6);
+  margin-left: 4%;
+  color: rgb(45,35,23);
 }
 
 h1 span {
@@ -52,6 +57,11 @@ h1 span {
 font-family: Verdana;
 font-weight: bold;
 color: rgb(69,54,37);
+margin-left: 2%
+}
+
+p {
+  text-indent: 20px;
 }
 
 .date {
