--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,13 +7,13 @@
 	<meta charset="UTF-8"/>
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 	{% block links %}
 	{% endblock %}
 
 </head>
 <body>
-	<h1>
+	<h1 class="h headline">
 		{% block headline %}{% endblock %}
 	</h1>
 	<div class="meta">
