[ 6 ] Добавлены картографические материалы

--- a/main/templates/main/actions.html
+++ b/main/templates/main/actions.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block headline %}
-	Белостокско-Минское сражение<span>{{curr_page.title}}</span>
+	Белостокско-Минское сражение<span>{{ curr_page.title }}</span>
 {% endblock %}
 
 {% block content %}
@@ -25,10 +25,10 @@
 		Наземному наступлению вермахта предшествовало мощное воздушное нападение, которое в считанные часы привело к разгрому советской авиации.
 	</p>
 
-	<table cols="1" align="right" cellpadding="5" bordercolor="lightsteelblue" rules="all">
+	<table cols="1" align="right" cellpadding="5" bordercolor="lightsteelblue" rules="all" width="30%">
 		<tr>
 			<td align="center">
-				<img src="{% static 'images/minsk_defense.jpg' %}" width="115%">
+				<img src="{% static 'images/minsk_defense.jpg' %}">
 			</td>
 		</tr>
 		<tr>
