[ 7 ] Значительно расширено текстовое содеожание

--- a/main/templates/main/main_page.html
+++ b/main/templates/main/main_page.html
@@ -105,18 +105,29 @@
 	</h2>
 
 	<p>
-		Белостокско-Минское сражение — приграничное сражение на центральном участке советско-германского фронта во время Великой Отечественной войны 22 июня — 8 июля 1941 года. В результате сражения основные силы советского Западного фронта оказались в окружении и были частично разгромлены, частично дезертировали, частично ушли в партизаны, частично попали в плен. 28 июня немецкие войска взяли Минск.
+		Белостокско-Минское сражение — приграничное сражение на центральном участке советско-германского фронта
+		во время Великой Отечественной войны 22 июня — 8 июля 1941 года.
+		В результате сражения основные силы советского Западного фронта оказались в окружении
+		и были частично разгромлены, частично дезертировали, частично ушли в партизаны, частично попали в плен.
+		28 июня немецкие войска взяли Минск.
+	</p>
+	<p>
+		Сама оборона Минска входит в оборонительную операцию в Белоруссии,
+		проходившую с 22 июня 1941 года до 9 июля 1941.<br>
+		Его границы можно определить с 24 июня, момента прибытия основных частей
+		и начала оборонительного сражения под  Минском,
+		до 28 июня, когда в Минск вступили немецкие войска.
 	</p>
 	
-	<h2 class="h">
+	<h1 class="h">
 		Планы и силы сторон
-	</h2>
+	</h1>
 
-	<h3 class="h">
+	<h2 class="h">
 		Германия
-	</h3>
+	</h2>
 	
-	<img src="{% static 'images/peopleV.jpg' %}" align="left" width="100" style="margin: 1%;">
+	<img src="{% static 'images/peopleV.jpg' %}" align="left" width="150" style="margin: 1%;">
 
 	<p>
 		Немецкое командование наносило основной удар на Московском направлении силами группы армий «Центр» и 2-го воздушного флота
@@ -130,7 +141,7 @@
 		План заключался в нанесении удара сильными фланговыми группировками при относительно слабом центре. 2-я и 3-я группы должны были соединиться и окружить советские войска западнее Минска. Одновременно пехотные соединения (всего 7 армейских корпусов, 20 пехотных дивизий), сведённые в две армии, вели наступление на окружение и должны были соединиться восточнее Белостока.
 	</p>
 
-	<h3 class="h">СССР</h3>
+	<h2 class="h">СССР</h2>
 
 	<p>
 		Планы СССР на начальный период войны точно не установлены.
@@ -142,6 +153,14 @@
 
 	<p>
 		Противовоздушную оборону наиболее важных объектов в границах военного округа осуществляли войска Западной зоны ПВО. Всего в составе округа было 44 дивизии (24 стрелковые дивизии, 2 кавалерийские дивизии, 12 танковых дивизий, 6 мотострелковых дивизий, 3 воздушно-десантных бригады, 8 укрепленных районов.
+	</p>
+	<p>
+		В обороне принимали участие дивизии и корпуса 13 армии в составе Западного фронта под командованием
+		Филатова Петра Михайловича, в частности обороняли Минск 108-я стрелковая дивизия (командир Орлов Н. И.),
+		64-я стрелковая дивизия (командир Иовлев С. И.), 44-ый стрелковый корпус (командир Юшкевич В. А.),
+		100-я стрелковая дивизия (командир Руссиянов И. Н.).
+		Вели наступление 47-й моторизированный корпус немецкой 2-й танковой группы под командованием Йоахима Лемельзена
+		и 57-й моторизированный корпус 3-й танковой группы под командованием Адольфа Кунтцена.
 	</p>
 
 	<p1 class="date">
