--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -16,6 +16,11 @@ body {
   background-color: #b09071;
 }
 
+p {
+  font-size: 25px;
+  text-indent: 2%;
+}
+
 .h {
   font-family: Ubuntu;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.6);
@@ -64,10 +69,6 @@ color: rgb(69,54,37);
 margin-left: 2%
 }
 
-p {
-  text-indent: 20px;
-}
-
 .date {
   font-family: Georgia;
   color: rgba(69,54,37,0.6);
@@ -87,19 +88,9 @@ p {
   border-width: 10px;
   border-style: groove;
   border-radius: 20px;
-  margin: 20px;
+  margin: 10px;
   padding: 10px 20px 10px 20px;
   background-color: #f5ce9a;
-}
-
-.one-line {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  float: left;
-  width: 15.5%;
-  margin-right: 2%;
 }
 
 .img-150 {
