--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -20,16 +20,22 @@
 	<div class="meta">
 		An <span>Article</span> by <span><a href="">@FedotSoldier</a></span>
 	</div>
-	<div class="scroll-list one-line">
+	<div class="scroll-list" style="width:20; display:inline-block;">
 		{% for page in pages %}
-			<a href="{% url 'page_detail' pattern=page.urlpattern_name %}">{{ page.title }}</a> <br/>
+			<a {% if page == curr_page %} style="color:#ffa500;" {% endif %}
+			   href="{% url 'page_detail' pattern=page.urlpattern_name %}">{{ page.title }}
+			</a> <br/>
 		{% endfor %}
 	</div>
-	<a class="button one-line" href="{% url 'page_detail' pattern=prev_page %}">Previous page </a>
-	<a class="button one-line" href="{% url 'page_detail' pattern=next_page %}">Next page     </a>
-	<a class="button one-line" href="/admin">Admin Panel</a>
+	<a class="button" href="{% url 'page_detail' pattern=prev_page %}"
+	   style="width:10%; display:inline-block; vertical-align:top;">
+		Previous page
+	</a>
+	<a class="button" href="{% url 'page_detail' pattern=next_page %}"
+	   style="width:10%; display:inline-block; vertical-align:top;">
+		Next page
+	</a>
 
-	<br/><br/><br/><br/><br/><br/><br/>
 	<div class="content">
 		{% block content %}
 		{% endblock %}
