--- a/main/templates/main/cards/FifthCard.html
+++ b/main/templates/main/cards/FifthCard.html
@@ -15,31 +15,34 @@
 {% block content %}
 
 <div class="body">
-	<h2 class="h">Картография</h2>
-
-    <font color="#646664" size="25px" style="margin-left:20%;">
-        Рабочая карта на 27.06-09.07.41 г.
-    </font>
-
-	<div style="margin-top:2%;">
-		<div style="display:inline-block; width:40%;">
-			<p style="font-size:25px;">
-				Описывает период с 27.06.1941 по 09.07.1941 г.
-                № документа: 14. Дата создания документа: 09.07.1941 г.
-                Архив: ЦАМО, Фонд: 208, Опись: 2511, Дело: 380
-                Авторы документа: ЗапФ
+	<div style="width:40%; display:inline-block; vertical-align:top; margin-left:2%;">
+		<h2>Положение на 25 – 26 июня</h2>
+		<p>
+			{{ curr_page.content }}
+		</p>
+	</div>
+	<div style="width:15%; display:inline-block;">
+	</div>
+	<div style="width:40%; display:inline-block;">
+		<div>
+			<img src="{% static 'images/maps/208_2511_380_1.jpg' %}"
+				 width="60%" style="border-radius:5px;">
+		</div>
+		<div>
+			<p style="text-indent:0%;; text-align:left; font-size:20px;">
+				Рабочая карта на 27.06-09.07.41 г.<br>
+				Описывает период с 27.06.1941 по 09.07.1941 г.<br>
+                № документа: 14. Дата создания документа: 09.07.1941 г.<br>
+                Архив: ЦАМО, Фонд: 208, Опись: 2511, Дело: 380<br>
+                Авторы документа: ЗапФ<br>
 				<a href="https://pamyat-naroda.ru/documents/view/?id=100357795&backurl=division%5C50%20сд::begin_date%5C28.06.1941::end_date%5C29.06.1941::use_main_string%5Ctrue::group%5Cmap::types%5Ckarti:shemi">
 					Источник
 				</a>
 			</p>
 		</div>
-		<div style="display:inline-block; width:40%;">
-			<img src="{% static 'images/maps/208_2511_380_1.jpg' %}"
-				 width="35%" align="middle" style="border-radius:5px;">
-		</div>
 	</div>
 	<p1 class="date">
-		Created: April 7, 2019
+		Created: April 17, 2019
 	</p1>
 </div>
 
