--- a/main/templates/main/cards/FirstCard.html
+++ b/main/templates/main/cards/FirstCard.html
@@ -15,27 +15,30 @@
 {% block content %}
 
 <div class="body">
-	<h2 class="h">Картография</h2>
-
-    <font color="#646664" size="25px" style="margin-left:20%;">
-        Карта положения войск фронта на 24-25 июня
-    </font>
-
-	<div style="margin-top:2%;">
-		<div style="display:inline-block; width:40%;">
-			<p style="font-size:25px;">
+	<div style="width:40%; display:inline-block; vertical-align:top; margin-left:2%;">
+		<h2>Положение 24 – 25 июня</h2>
+		<p>
+			{{ curr_page.content }}
+		</p>
+	</div>
+	<div style="width:15%; display:inline-block;">
+	</div>
+	<div style="width:40%; display:inline-block;">
+		<div>
+			<img src="{% static 'images/maps/208_2511_425_1.jpg' %}"
+				 width="60%" style="border-radius:5px;">
+		</div>
+		<div>
+			<p style="text-indent:0%;; text-align:left; font-size:20px;">
+				Карта положения войск фронта на 24-25 июня<br>
 				Описывает период с 24.06.1941 по 25.06.1941 г.<br>
 				Дата создания документа: 25.06.1941 г.<br>
-				Архив: ЦАМО, Фонд: 208, Опись: 2511, Дело: 424<br>
-				Авторы документа: ЗапФ<br>
-				<a href="https://pamyat-naroda.ru/documents/view/?id=101164274&backurl=division%5C21%20ск::begin_date%5C24.06.1941::end_date%5C25.06.1941::use_main_string%5Ctrue::group%5Cmap::types%5Ckarti:shemi">
+				Архив: ЦАМО, Фонд: 208, Опись: 2511, Дело: 425<br>
+				Авторы документа: ЗапФ
+				<a href="https://pamyat-naroda.ru/documents/view/?id=101164315&backurl=division%5C21%20ск::begin_date%5C24.06.1941::end_date%5C25.06.1941::use_main_string%5Ctrue::group%5Cmap::types%5Ckarti:shemi">
 					Источник
 				</a>
 			</p>
-		</div>
-		<div style="display:inline-block; width:40%;">
-			<img src="{% static 'images/maps/208_2511_424_1.jpg' %}"
-				 width="35%" align="middle" style="border-radius:5px;">
 		</div>
 	</div>
 	<p1 class="date">
