--- a/main/templates/main/cards/SixthCard.html
+++ b/main/templates/main/cards/SixthCard.html
@@ -15,31 +15,34 @@
 {% block content %}
 
 <div class="body">
-	<h2 class="h">Картография</h2>
-
-    <font color="#646664" size="25px" style="margin-left:20%;">
-        Карта положения войск фронта на 25 по 27 июня
-    </font>
-
-	<div style="margin-top:2%;">
-		<div style="display:inline-block; width:40%;">
-			<p style="font-size:25px;">
-				Описывает период с 25.06.1941 по 27.06.1941 г.
-                Дата создания документа: 27.06.1941 г.
-                Архив: ЦАМО, Фонд: 208, Опись: 2511, Дело: 426
-                Авторы документа: ЗапФ
+	<div style="width:40%; display:inline-block; vertical-align:top; margin-left:2%;">
+		<h2>Положение 27 – 28 июня</h2>
+		<p>
+			{{ curr_page.content }}
+		</p>
+	</div>
+	<div style="width:15%; display:inline-block;">
+	</div>
+	<div style="width:40%; display:inline-block;">
+		<div>
+			<img src="{% static 'images/maps/208_2511_426_1.jpg' %}"
+				 width="60%" style="border-radius:5px;">
+		</div>
+		<div>
+			<p style="text-indent:0%;; text-align:left; font-size:20px;">
+				Карта положения войск фронта на 25-27 июня<br>
+				Описывает период с 25.06.1941 по 27.06.1941 г.<br>
+                Дата создания документа: 27.06.1941 г.<br>
+                Архив: ЦАМО, Фонд: 208, Опись: 2511, Дело: 426<br>
+                Авторы документа: ЗапФ<br>
 				<a href="https://pamyat-naroda.ru/documents/view/?id=101164366&backurl=fund%5C208::inventory%5C2511::file%5C426::use_main_string%5Ctrue::group%5Call::types%5Copersvodki:rasporyajeniya:otcheti:peregovori:jbd:direktivi:prikazi:posnatovleniya:dokladi:raporti:doneseniya:svedeniya:plani:plani_operaciy:karti:shemi:spravki:drugie">
 					Источник
 				</a>
 			</p>
 		</div>
-		<div style="display:inline-block; width:40%;">
-			<img src="{% static 'images/maps/208_2511_426_1.jpg' %}"
-				 width="35%" align="middle" style="border-radius:5px;">
-		</div>
 	</div>
 	<p1 class="date">
-		Created: April 7, 2019
+		Created: April 17, 2019
 	</p1>
 </div>
 
