--- a/main/templates/main/actions.html
+++ b/main/templates/main/actions.html
@@ -36,6 +36,11 @@
 				Бои на Белостокском выступе 22-25 июня 1941
 			</td>
 		</tr>
+		<tr>
+			<td align="center">
+				<a href="https://ru.wikipedia.org/wiki/Файл:Belostok.jpg">Источник</a>
+			</td>
+		</tr>
 	</table>
 
 	<p>
@@ -63,7 +68,7 @@
 	</p>
 
 	<p>
-		Вечером 22 июня командующим Северо-Западного, Западного и Юго-Западного фронтов поступила «Директива № 3» за подписями наркома обороны СССР маршала Тимошенко, начальника Генштаба СССР Жукова и члена главвоенсовета Маленкова, предписывавшая «нанеся мощный контрудар» уничтожить наступающего противника и к 24 июня занять польские города Сувалки и Люблин. 23 июня в штаб Западного фронта вылетели представители высшего командования маршалы Б. М. Шапошников и Г. И. Кулик, затем маршал К. Е. Ворошилов.
+		Вечером 22 июня командующим Северо-Западного, Западного и Юго-Западного фронтов поступила<br> «Директива № 3» за подписями наркома обороны СССР маршала Тимошенко, начальника Генштаба СССР Жукова и члена главвоенсовета Маленкова, предписывавшая «нанеся мощный контрудар» уничтожить наступающего противника и к 24 июня занять польские города Сувалки и Люблин. 23 июня в штаб Западного фронта вылетели представители высшего командования маршалы Б. М. Шапошников и Г. И. Кулик, затем маршал К. Е. Ворошилов.
 	</p>
 
 	<p1 class="date">
