--- a/main/templates/main/main_page.html
+++ b/main/templates/main/main_page.html
@@ -97,7 +97,6 @@
 			<td>1 111 пропали без вести</td>
 			<td></td>
 		</tr>
-		
 	</table>
 
 	<h2 class="h">
@@ -105,8 +104,9 @@
 	</h2>
 
 	<p>
-		Белостокско-Минское сражение — приграничное сражение на центральном участке советско-германского фронта
-		во время Великой Отечественной войны 22 июня — 8 июля 1941 года.
+		<a href="https://ru.wikipedia.org/wiki/Белостокско-Минское_сражение"> Белостокско-Минское сражение</a>
+		— приграничное сражение на центральном участке советско-германского фронта
+		во время Великой Отечественной войны.
 		В результате сражения основные силы советского Западного фронта оказались в окружении
 		и были частично разгромлены, частично дезертировали, частично ушли в партизаны, частично попали в плен.
 		28 июня немецкие войска взяли Минск.
@@ -114,7 +114,7 @@
 	<p>
 		Сама оборона Минска входит в оборонительную операцию в Белоруссии,
 		проходившую с 22 июня 1941 года до 9 июля 1941.<br>
-		Его границы можно определить с 24 июня, момента прибытия основных частей
+		Её границы можно определить с 24 июня, момента прибытия основных частей
 		и начала оборонительного сражения под  Минском,
 		до 28 июня, когда в Минск вступили немецкие войска.
 	</p>
@@ -152,12 +152,23 @@
 	</p>
 
 	<p>
+		На 22 июня 1941 года <i>Западный фронт</i> имел в своем составе четыре армии:<br>
+		· 3-я армия (командующий — генерал-лейтенант В. И. Кузнецов)<br>
+		· 10-я армия (генерал-майор К. Д. Голубев)<br>
+		· 4-я армия (генерал-майор А. А. Коробков)<br>
+		· 13-я армия (генерал-лейтенант П. М. Филатов)<br>
+		Части и соединения фронтового подчинения, в том числе 17-й и 20-й мехкорпуса,
+			4-й воздушно-десантный корпус, 2-й, 44-й и 47-й стрелковые корпуса.<br>
+		Всего в составе фронта насчитывалось 45 дивизий (24 стрелковых, 12 танковых, 6 моторизованных,
+			2 кавалерийские; 4-й воздушно-десантный корпус принят за расчётную дивизию).<br>
+	<p>
 		Противовоздушную оборону наиболее важных объектов в границах военного округа осуществляли войска Западной зоны ПВО. Всего в составе округа было 44 дивизии (24 стрелковые дивизии, 2 кавалерийские дивизии, 12 танковых дивизий, 6 мотострелковых дивизий, 3 воздушно-десантных бригады, 8 укрепленных районов.
 	</p>
+
 	<p>
 		В обороне принимали участие дивизии и корпуса 13 армии в составе Западного фронта под командованием
 		Филатова Петра Михайловича, в частности обороняли Минск 108-я стрелковая дивизия (командир Орлов Н. И.),
-		64-я стрелковая дивизия (командир Иовлев С. И.), 44-ый стрелковый корпус (командир Юшкевич В. А.),
+		64-я стрелковая дивизия (командир Иовлев С. И.), 44-й стрелковый корпус (командир Юшкевич В. А.),
 		100-я стрелковая дивизия (командир Руссиянов И. Н.).
 		Вели наступление 47-й моторизированный корпус немецкой 2-й танковой группы под командованием Йоахима Лемельзена
 		и 57-й моторизированный корпус 3-й танковой группы под командованием Адольфа Кунтцена.
