--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -2,6 +2,20 @@ body {
   background: #f7d7ab;
 }
 
+.main-content {
+    padding-bottom: 2%;  /* footer */
+}
+
+.footer {  /* footer */
+  background-color: grey;
+  padding: 3%;
+  position: absolute;
+  margin-left: -1em;
+  margin-bottom: 0em;
+  width: 100%;
+  height: 15%;
+}
+
 .headline {
   text-align: center;
   font-size: 2.5em;
@@ -29,7 +43,7 @@ p {
 }
 
 h2 {
-	text-decoration: underline;
+  font-style: oblique;
 }
 
 h1 span {
