[ 8.1 ] Правки HTML под внешний вид, который сайт имеет на продакшене

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -51,7 +51,9 @@
 	</div>
 
 	<div class="footer">
-		<div style="width:55%; display:inline-block; vertical-align:top; margin-top:-2%;">
+		<div style="width:4%; display:inline-block;">
+		</div>
+		<div style="width:51%; display:inline-block; vertical-align:top; margin-top:-2%;">
 			<strong><font color="white" size="3px">
 				Проект выполнен в рамках кейса №57 ШРД 2018/19 гг.
 			</font></strong><br><br>
@@ -65,7 +67,7 @@
 			<font color="white" size="3px" style="margin-left:2%;">Чернолуцкий Фёдор</font><br><br>
 		</div>
 		<div style="width:20%; display:inline-block;">
-			<img src="{% static 'images/shrd.jpg' %}" width="200" style="border-radius:5px; margin-bottom:3%;">
+			<img src="{% static 'images/shrd.jpg' %}" width="200" style="border-radius:5px; margin-bottom:2%;">
 		</div>
 		<div style="width:20%; display:inline-block;">
 			<img src="{% static 'images/sponsors.jpg' %}" width="200" style="border-radius:5px;">
